[tool.poetry]
name = "lstm-predict"
version = "0.1.0"
description = ""
authors = ["yuhsienchiang <yuhsien.sam.chiang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
torch = "^2.2.2"
pandas = "^2.2.2"
matplotlib = "^3.8.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
